--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,29 @@
-body {
-	background-image: "spaghetti.jpg";
-        background-repeat:no-repeat;
+  body, html {
+    height: 100%;
+    margin: 0;
+    font-family: 'Montserrat-bold', Arial, Helvetica, sans-serif;
+
+  }
+
+
+  .hero-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/spaghetti.jpg");
+    height: 60%;
+    width: 80%;
+    background-position: center center;
+    background-repeat: no-repeat;
+    position: relative;
+    display: block;
+    margin: 0 auto;
+    background-size: auto, cover;
+}
+
+  .hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size:18px;text-shadow: 2px 2px 4px #333333;
+  }
